--- a/src/responsive.css
+++ b/src/responsive.css
@@ -627,10 +627,11 @@
   }
   .mac {
     margin: 30px auto;
+    width: 100%;
   }
 
   .mac .container {
-    border-bottom: 1px solid #eeeeee;
+    /* border-bottom: 1px solid #eeeeee; */
     padding-bottom: 20px;
   }
   .mac .title {
@@ -775,16 +776,15 @@
   }
   .more-stories-cards .card-image-cont img {
     width: 120px !important;
-    height: 80px;
+    height: 92px;
   }
   .more-stories-cards .card-content {
-    height: 48px !important;
-    line-height: 16px;
+    height: 54px !important;
+    line-height: 18px;
     overflow: hidden;
     font-size: 14px !important;
-    margin: 3px 0px !important;
+    margin: 6px 0px !important;
     width: 90% !important;
-    /* border: 1px solid black; */
   }
   .more-stories-cards > div:nth-of-type(2) p:nth-of-type(3) span {
     font-size: 10px !important;
@@ -933,6 +933,10 @@
   .vc-premium .shadow {
     height: 320px;
     width: 190px;
+  }
+
+  .vcp-cards .meta {
+    margin-top: 10px;
   }
 
   .limited-partner .right-btn,
@@ -1925,6 +1929,9 @@
   }
 }
 @media (max-width: 450px) {
+  .top-news .text-content {
+    margin-bottom: 0px;
+  }
   .top-news-cards .meta {
     margin-top: 7px;
   }
